--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,14 @@ code {
     border-radius: 0px 0px 20px 20px;
     margin-bottom: 20px;
 }
+
+.modalImg {
+    padding: 5px;
+    border: 1px solid rgba(168, 168, 168, 0.557);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.modalImg:hover {
+    box-shadow: 1px 3px 5px rgba(130, 130, 130, 0.665);
+}
