--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ button.mx-2:nth-child(1){
 
 .profile_foto_container{
   overflow: hidden;
-    margin-top: -100px;
+    margin-top: -10%;
     width: 30vw;
 }
 
