--- a/src/App.css
+++ b/src/App.css
@@ -1,109 +1,102 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
-
-
 
 /* Main User */
 
-.mainDiv{
-  border: 1px solid rgba(128, 128, 128, 0.355);
-  border-radius: 10px;
-  overflow: hidden;
+.mainDiv {
+    border: 1px solid rgba(128, 128, 128, 0.355);
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #fff;
 }
 
-.bg_image_container{
-  overflow: hidden;
-  height: 22vh;
+.bg_image_container {
+    overflow: hidden;
+    height: 22vh;
 }
 
-.profilo_btn{
-  border-radius: 50px !important;
+.profilo_btn {
+    border-radius: 50px !important;
 }
-button.mx-2:nth-child(1){
-  margin-left: 0 !important;
-}
-
-
-
-.section_icon{
-  align-items: center;
+button.mx-2:nth-child(1) {
+    margin-left: 0 !important;
 }
 
+.section_icon {
+    align-items: center;
+}
 
-.profile_foto_container{
-  overflow: hidden;
+.profile_foto_container {
+    overflow: hidden;
     margin-top: -10%;
     width: 30vw;
 }
 
-.myContainer{
-  width: 97% !important;
-  margin: auto !important;
+.myContainer {
+    width: 97% !important;
+    margin: auto !important;
 }
 
 .profile_foto {
-  justify-content: space-between;
+    justify-content: space-between;
 }
 
 .profile_foto_image {
-  border-radius: 50%;
-  border: 2px solid white;
+    border-radius: 50%;
+    border: 2px solid white;
 }
-
-
 
 .element {
-  
-  font-size: small;
-  border-radius: 15px;
-  padding: 10px;
-  width: 90%;
-  border: 2px solid rgba(128, 128, 128, 0.355) ;
+    font-size: small;
+    border-radius: 15px;
+    padding: 10px;
+    width: 90%;
+    border: 2px solid rgba(128, 128, 128, 0.355);
 }
 
-div.Carousel__ItemSet-sc-hyhecw-3:nth-child(1) > div:nth-child(1) > div:nth-child(1){
-  background-color: rgba(128, 128, 128, 0.355);
+div.Carousel__ItemSet-sc-hyhecw-3:nth-child(1) > div:nth-child(1) > div:nth-child(1) {
+    background-color: rgba(128, 128, 128, 0.355);
 }
 
 .element p {
-  margin-bottom: 1px;
+    margin-bottom: 1px;
 }
 
 .pencil_button {
-  border-radius: 50% !important;
+    border-radius: 50% !important;
 }
