--- a/src/index.css
+++ b/src/index.css
@@ -217,7 +217,7 @@ code {
     color: rgb(95, 155, 65);
 }
 
-.bi-briefcase-fill {
+.mainFeedHover .bi-briefcase-fill {
     color: rgb(168, 114, 232);
 }
 
