--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@ code {
 .navImg {
     border-radius: 50%;
     margin-top: 1px;
+    cursor: pointer;
 }
 
 .myNav .bi-grid-3x3-gap-fill {
@@ -106,6 +107,10 @@ code {
 
 .myModal span:hover {
     text-decoration: underline;
+}
+
+.modalDarkMode {
+    border-radius: 8px;
 }
 
 /* sidebar */
