--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-/* main colors */
+/* main color */
 .blue {
     color: rgb(10, 102, 194);
 }
@@ -21,6 +21,11 @@ code {
     flex-direction: column;
     text-align: center;
     padding: 0 20px;
+}
+
+/* pointer */
+.pointer {
+    cursor: pointer;
 }
 
 #navLinkGrid {
@@ -79,6 +84,90 @@ code {
     left: 10px;
     top: 5px;
     color: rgb(90, 90, 90) !important;
+}
+
+/* Main User */
+
+.mainDiv {
+    border: 1px solid rgba(128, 128, 128, 0.355);
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #fff;
+}
+
+.bg_image_container {
+    overflow: hidden;
+    height: 22vh;
+}
+
+.profilo_btn {
+    border-radius: 50px !important;
+}
+button.mx-2:nth-child(1) {
+    margin-left: 0 !important;
+}
+
+.section_icon {
+    align-items: center;
+}
+
+.profile_foto_container {
+    overflow: hidden;
+    margin-top: -10%;
+    width: 30vw;
+}
+
+.myContainer {
+    width: 97% !important;
+    margin: auto !important;
+}
+
+.profile_foto {
+    justify-content: space-between;
+}
+
+.profile_foto_image {
+    border-radius: 50%;
+    border: 2px solid white;
+    cursor: pointer;
+    width: 150px;
+    height: 150px;
+}
+
+.feedFooter {
+    font-size: 0.7em !important;
+}
+
+.element {
+    font-size: small;
+    border-radius: 15px;
+    padding: 10px;
+    width: 90%;
+    border: 2px solid rgba(128, 128, 128, 0.355);
+}
+
+div.Carousel__ItemSet-sc-hyhecw-3:nth-child(1) > div:nth-child(1) > div:nth-child(1) {
+    background-color: rgba(128, 128, 128, 0.355);
+}
+
+.element p {
+    margin-bottom: 1px;
+}
+
+.feedFooter a:hover {
+    text-decoration: underline;
+    color: blue;
+}
+
+.feedFooter p {
+    line-height: 10px;
+}
+
+.immaginePost {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 /* modal */
@@ -220,6 +309,16 @@ code {
     cursor: pointer;
 }
 
+.main_feed_foto_image {
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 50%;
+    border: 2px solid white;
+    cursor: pointer;
+}
+
 .bi-slash-square-fill {
     color: rgb(231, 163, 62);
 }
@@ -258,10 +357,6 @@ code {
     border-radius: 5px;
 }
 
-.userLink {
-    cursor: pointer;
-}
-
 .userLink:hover {
     color: rgb(0, 89, 255);
     text-decoration: underline;
@@ -287,4 +382,45 @@ code {
     cursor: pointer;
 }
 
-/* attivita */
+/* responsive */
+
+.feedProfileDivMedia {
+    border: 1px solid rgba(128, 128, 128, 0.355);
+    border-radius: 10px 10px 10px 10px;
+    overflow: hidden;
+    display: none;
+}
+@media only screen and (max-width: 1400px) {
+    #navLink span {
+        display: none;
+    }
+    .mainFeedHover span {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    #displaySide {
+        display: none;
+    }
+    #mainWidth {
+        width: 100vw;
+    }
+    .feedProfileDivMedia {
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .profile_foto_image {
+        width: 80px;
+        height: 80px;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    #mediaBtns {
+        font-size: 0.7em;
+        height: 70px;
+    }
+}
