--- a/src/index.css
+++ b/src/index.css
@@ -303,10 +303,13 @@ div.Carousel__ItemSet-sc-hyhecw-3:nth-child(1) > div:nth-child(1) > div:nth-chil
 .feed_foto_image {
     position: absolute;
     top: 30px;
-    left: 37%;
+    left: 50%;
+    transform: translateX(-50%);
     border-radius: 50%;
     border: 2px solid white;
     cursor: pointer;
+    width: 80px;
+    height: 80px;
 }
 
 .main_feed_foto_image {
@@ -317,6 +320,8 @@ div.Carousel__ItemSet-sc-hyhecw-3:nth-child(1) > div:nth-child(1) > div:nth-chil
     border-radius: 50%;
     border: 2px solid white;
     cursor: pointer;
+    width: 80px;
+    height: 80px;
 }
 
 .bi-slash-square-fill {
