--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,7 @@ button.mx-2:nth-child(1) {
     border-radius: 15px;
     padding: 10px;
     width: 90%;
+    height: 100px;
     border: 2px solid rgba(128, 128, 128, 0.355);
 }
 
@@ -365,6 +366,7 @@ div.Carousel__ItemSet-sc-hyhecw-3:nth-child(1) > div:nth-child(1) > div:nth-chil
 .userLink:hover {
     color: rgb(0, 89, 255);
     text-decoration: underline;
+    cursor: pointer;
 }
 /* footerUser */
 .footerCol {
@@ -427,5 +429,8 @@ div.Carousel__ItemSet-sc-hyhecw-3:nth-child(1) > div:nth-child(1) > div:nth-chil
     #mediaBtns {
         font-size: 0.7em;
         height: 70px;
+    }
+    #searchBar {
+        display: none !important;
     }
 }
